# WPP

./: .gitignore  2025-08-28-this-session-is-being-continued-from-a-previous-co.txt  BUILD_INSTRUCTIONS.md  BUILD_WPP.bat  BUILD_WPP_QUICK.bat  BUILD_WPP_SIMPLE.bat  BUILD_WPP_WEB.bat  BUILD_WPP_WEB_QUICK.bat  Delete Database.bat  INSTALL_PREREQUISITES.bat  Makefile  README.md  Run Reports.bat  RunReports.py  SQL_Queries.sql  Update Database.bat  UpdateDatabase.py  UpdateDatabase.spec  build_and_deploy.ps1  build_and_deploy_simple.ps1  build_executable.bat  build_executable.ps1  build_executable.py  build_executable.sh  build_simple_exe.py  build_web_app.py  build_web_app_fast.py  build_web_deployment.ps1  clean_test_data.sh  debug_ui_test.html  decrypt_test_data.sh  dev_start.py  encrypt_test_data.sh  fake_test_data.py  immediate_test.html  install_prerequisites.ps1  pyproject.toml  rthook_wpp_package.py  run_fake_test_data.sh  run_fastapi.py  (+15 more)
.streamlit/: config.toml
docs/: BUILD_INSTRUCTIONS.md  DEVELOPMENT_GUIDE.md  README_DEPLOYMENT.md  README_FASTAPI_REACT.md  remove-streamlit-guide.md
docs/design/: CODEBASE_ANALYSIS.md  DATABASE_TRANSACTION_FIX_PLAN.md  IMPROVEMENT_SUGGESTIONS.md  LANGUAGE_PORT_ANALYSIS_CLAUDE.md  LANGUAGE_PORT_ANALYSIS_GEMINI.md  LANGUAGE_PORT_ANALYSIS_GROK.md  PROJECT_IMPROVEMENT_RECOMMENDATIONS.md
src/wpp/: RunReports.py  UpdateDatabase.py  app.py  calendars.py  config.py  config.toml  constants.py  data_classes.py  database_commands.py  db.py  excel.py  exceptions.py  logger.py  logger_interface.py  network_security.py  output_handler.py  ref_matcher.py  simple_shutdown.py  sql_queries.py  utils.py  web_logger.py
src/wpp/api/: __init__.py  main.py  models.py  services.py
src/wpp/database/: __init__.py  database_commands.py  db.py
src/wpp/input/: __init__.py  excel.py  xml.py
src/wpp/output/: output_handler.py
src/wpp/schemas/: EndOfDayBalanceExtract.xsd  IBLTypes.xsd  PreviousDayTransactionExtract.xsd
src/wpp/ui/react/: web_app.py
src/wpp/ui/streamlit/: app.py  shutdown_api.py
src/wpp/utils/: __init__.py  utils.py
tests/: README_Test_Scenarios.md  conftest.py  test_RunReports.py  test_UpdateDatabase.py  test_UpdateDatabase_error_cases.py  test_UpdateDatabase_refactored.py  test_UpdateDatabase_xml_pipeline.py  test_UpdateDatabase_xml_validation.py  test_config.py  test_excel.py  test_exceptions.py  test_ref_matcher.py  test_reference_parsing.py  test_regression.py  test_utils.py
tests/Data/Inputs/: 001 GENERAL CREDITS CLIENTS WITHOUT IDENTS.xlsx.gpg  Accounts.xlsx.gpg  EndOfDayBalanceExtract_175_11102022_031250.zip.gpg  Estates.xlsx.gpg  PreviousDayTransactionExtract_175_11102022_031250.zip.gpg  Qube EOD balances 2022.10.11.xlsx.gpg  Tenants.xlsx.gpg
tests/Data/Logs/: ref_matcher_2025-09-10_15-25-42.csv  ref_matcher_2025-09-10_15-28-52.csv
tests/Data/ReferenceLogs/: Log_RunReports_2025-02-25.txt  Log_UpdateDatabase_2025-02-25.txt  ref_matcher.csv
tests/Data/TestScenarios/2025-08-01/Inputs/: 001 GENERAL CREDITS CLIENTS WITHOUT IDENTS.xlsx.gpg  Accounts.xlsx.gpg  EndOfDayBalanceExtract_175_03082025_030628.zip.gpg  Estates.xlsx.gpg  Holidays.xlsx.gpg  PreviousDayTransactionExtract_175_03082025_030628.zip.gpg  Qube EOD Balances 2025.08.01.xlsx.gpg  Tenants.xlsx.gpg
tests/Data/TestScenarios/2025-08-01/ReferenceLogs/: Log_RunReports_2025-08-16_13-20-16.txt  Log_RunReports_2025-08-20_11-06-33.txt  Log_RunReports_2025-08-24_21-51-06.txt  Log_RunReports_2025-08-28_17-37-06.txt  Log_UpdateDatabase_2025-08-15_23-28-26.txt  Log_UpdateDatabase_2025-08-16_13-20-12.txt  Log_UpdateDatabase_2025-08-20_11-06-29.txt  Log_UpdateDatabase_2025-08-28_17-37-02.txt  ref_matcher_2025-08-15_23-28-26.csv.gpg  ref_matcher_2025-08-16_13-20-13.csv.gpg  ref_matcher_2025-08-20_11-06-29.csv.gpg  ref_matcher_2025-08-24_21-51-02.csv.gpg  ref_matcher_2025-08-28_17-36-59.csv.gpg
tests/Data/TestScenarios/2025-08-01/ReferenceReports/: Data_Import_Issues_2025-08-15.xlsx.gpg  Data_Import_Issues_2025-08-16.xlsx.gpg  Data_Import_Issues_2025-08-20.xlsx.gpg  (+3 more)
web/: README.md  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.css
web/src/components/: ConnectionErrorOverlay.js  DataTable.js  LogViewer.js  ProgressBar.js  StatusIndicator.js
web/src/contexts/: AppContext.js  ConnectionContext.js  DatabaseContext.js
web/src/pages/: Dashboard.js  DatabasePage.js  ReportsPage.js
web/src/services/: api.js
(+29 files in other folders)
