[project]
name = "wpp"
version = "1.0.0"
description = "WPP Service Charge Reconciliation"
authors = [
    { name = "Steve Morgan", email = "srmorgan1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13.0"

dependencies = [
    "dateutils>=0.6.12",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
    "watchdog>=6.0.0",
]

[project.scripts]
update_database = "wpp.UpdateDatabase:main"
run_reports = "wpp.RunReports:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "types-openpyxl>=3.1.5.20241225",
    "types-python-dateutil>=2.9.0.20241206",
]

[tool.ruff]
target-version = "py313"
line-length = 200

[tool.ruff.lint]
extend-select = [
    # "D",    # pycodestyle
    "E", "W",   # pycodestyle
    "F",    # pyflakes
    "I",    # sort imports
    "UP",   # pyupgrade
    # "RUF",  # ruff dev's own rules
    # "SIM",  # pyflakes simplicity
    # "C90",  # more complexity rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
