[project]
name = "wpp"
version = "1.0.0"
description = "WPP Service Charge Reconciliation"
authors = [
    { name = "Steve Morgan", email = "srmorgan1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13.0"

dependencies = [
    "dateutils>=0.6.12",
    "fastapi>=0.116.1",
    "lxml>=5.0.0",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]

[project.scripts]
update_database = "wpp.UpdateDatabase:main"
run_reports = "wpp.RunReports:main"

[dependency-groups]
dev = [
    "faker>=26.0.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "pyinstaller>=6.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "ruff>=0.9.7",
    "types-openpyxl>=3.1.5.20241225",
    "types-python-dateutil>=2.9.0.20241206",
    "types-toml>=0.10.8.20240310",
]

[tool.ruff]
target-version = "py313"
line-length = 200
# ignore: Specifies the list of error codes to ignore. Here, it includes E501 (line too long)
# and W503 (line break before binary operator).
# per-file-ignores = {
#     "__init__.py" = ["F401"],
# }

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    # "D",    # pycodestyle
    "E", "W",   # pycodestyle
    "F",    # pyflakes
    "I",    # sort imports
    "UP",   # pyupgrade
    # "RUF",  # ruff dev's own rules
    # "SIM",  # pyflakes simplicity
    # "C90",  # more complexity rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::UserWarning:openpyxl",
]
